--- a/ansible/eks_cluster_kubernetes_dashboard.yml
+++ b/ansible/eks_cluster_kubernetes_dashboard.yml
@@ -4,27 +4,47 @@
   connection: local
   gather_facts: no
   tags:
-    - shell
+    - k8s
+  vars_files:
+    - ../cloudformation/output.yaml
+    - ./secret.yml
   tasks:
-    - name: Apply the Kubernetes Dashboard file
-      shell: 'kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/master/aio/deploy/recommended/kubernetes-dashboard.yaml'
-    - name: Apply the Heapster file
-      shell: 'kubectl apply -f ../eks/heapster.yaml'
-    - name: Apply the InfluxDB file
-      shell: 'kubectl apply -f ../eks/influxdb.yaml'
-    - name: Apply the Heapster RBAC file
-      shell: 'kubectl apply -f ../eks/heapster-rbac.yaml'
-    - name: Apply the EKS Admin file
-      shell: 'kubectl apply -f ../eks/eks_admin.yaml'
+    - name: Apply the Kubernetes Dashboard definition
+      k8s:
+        state: present
+        src: '../eks/kubernetes-dashboard.yaml'
+    - name: Apply the Heapster definition
+      k8s:
+        state: present
+        src: '../eks/heapster.yaml'
+    - name: Apply the InfluxDB definition
+      k8s:
+        state: present
+        src: '../eks/influxdb.yaml'
+    - name: Apply the Heapster RBAC definition
+      k8s:
+        state: present
+        src: '../eks/heapster-rbac.yaml'
+    - name: Apply the EKS Admin definition
+      k8s:
+        state: present
+        src: '../eks/eks_admin.yaml'
     - name: Get the kube-system secret for eks-admin
-      shell: "kubectl -n kube-system get secret | grep eks-admin | awk '{print $1}'"
-      register: output
-    - set_fact:
-        eks_admin_secret: '{{ output["stdout"] }}'
-    - name: Retrieve Kubernetes dashboard authentication token
-      shell: "kubectl -n kube-system describe secret {{ eks_admin_secret }} | grep token: | awk '{print $2}'"
-      register: output
-    - set_fact:
-        eks_admin_token: '{{ output["stdout"] }}'
-    - debug:
-        var: eks_admin_token
+      k8s_facts:
+        namespace: kube-system
+        kind: secret
+      register: secrets
+      no_log: True
+    - name: Find the eks-admin secret
+      set_fact:
+        token: '{{ item["data"]["token"] | b64decode }}'
+      loop: '{{ secrets["resources"] }}'
+      when: >
+        item["metadata"] is defined 
+          and item["metadata"]["annotations"] is defined
+          and item["metadata"]["annotations"]["kubernetes.io/service-account.name"] is defined
+          and item["metadata"]["annotations"]["kubernetes.io/service-account.name"] == "eks-admin"
+      no_log: True
+    - name: Print the Kubernetes Dashboard token
+      debug:
+        var: token
