--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,3 +8,4 @@ vault_password_file = ./password
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
+display_skipped_hosts = False
