modified the kubernetes_dashboard playbook

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -1,25 +1,32 @@
 .PHONY: eks_cluster_up eks_cluster_down templates
 
-eks_cluster_up: ANSIBLE_CONFIG=./ansible.cfg
+all: ANSIBLE_CONFIG=./ansible.cfg
 eks_cluster_up: 
-	ansible-playbook eks_cluster.yml --extra-vars "eks_cluster_state=present"
+	ansible-playbook eks_cluster.yml --extra-vars "eks_cluster_state=present" -v
 
-eks_cluster_down: ANSIBLE_CONFIG=./ansible.cfg
 eks_cluster_down: 
-	ansible-playbook eks_cluster.yml --extra-vars "eks_cluster_state=absent" --tags "cloudformation"
+	ansible-playbook eks_cluster.yml --extra-vars "eks_cluster_state=absent" --tags "cloudformation" -v
 
-eks_cluster_add_nodes: ANSIBLE_CONFIG=./ansible.cfg
 eks_cluster_add_nodes:
 	ansible-playbook eks_cluster_add_nodes.yml -v
 
-eks_cluster_set_up: ANSIBLE_CONFIG=./ansible.cfg
 eks_cluster_set_up:
 	ansible-playbook eks_cluster_set_up.yml -v
 
-eks_cluster_kubernetes_dashboard: ANSIBLE_CONFIG=./ansible.cfg
-eks_cluster_kubernetes_dashboard:
-	ansible-playbook eks_cluster_kubernetes_dashboard.yml -v
+eks_cluster_kubernetes_dashboard_up:
+	ansible-playbook eks_cluster_kubernetes_dashboard.yml -v --extra-vars "kubernetes_dashboard_state=present"
 
-eks_cluster_ecsdemo: ANSIBLE_CONFIG=./ansible.cfg
-eks_cluster_ecsdemo:
-	ansible-playbook eks_cluster_ecsdemo.yml -v
+eks_cluster_kubernetes_dashboard_down:
+	ansible-playbook eks_cluster_kubernetes_dashboard.yml -v --extra-vars "kubernetes_dashboard_state=absent" 
+
+eks_cluster_demo_application_up:
+	ansible-playbook eks_cluster_demo_application.yml -v --extra-vars "demo_application_state=present"
+
+eks_cluster_demo_application_down:
+	ansible-playbook eks_cluster_demo_application.yml -v --extra-vars "demo_application_state=absent"
+
+eks_cluster_kubernetes_metric_service_up:
+	ansible-playbook eks_cluster_kubernetes_metric_service.yml -v --extra-vars "kubernetes_metrics_service_state=present"
+
+eks_cluster_kubernetes_metric_service_down:
+	ansible-playbook eks_cluster_kubernetes_metric_service.yml -v --extra-vars "kubernetes_metrics_service_state=absent"
