--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 
 inventory      = ./hosts.yml
+roles_path = ./roles
 host_key_checking = False
 retry_files_enabled = False
 vault_password_file = ./password
